--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=dbsys
 APP_ENV=local
-APP_KEY=base64:QnW51CoefO7RotbgbcDVg9EPLh9nHX0FfofOF3bsdbE=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8989
 
@@ -32,8 +32,8 @@ REDIS_PORT=6379
 MAIL_MAILER=smtp
 MAIL_HOST=sandbox.smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=285a7964f77a96
-MAIL_PASSWORD=76ceca82129767
+MAIL_USERNAME=
+MAIL_PASSWORD=
 MAIL_ENCRYPTION=tls
 MAIL_FROM_ADDRESS="heimdall@PrintWatch.com"
 MAIL_FROM_NAME="${APP_NAME}"
