--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=dbsys
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:OwEXO0t5ZNTTps4QtBJdzDCyUjSbXFzglb5Y1Qr+bKI=
 APP_DEBUG=true
 APP_URL=http://localhost:8989
 
@@ -11,7 +11,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=dbprintwatch
+DB_DATABASE=dbprintwatch-dev
 DB_USERNAME=root
 DB_PASSWORD=root
 
