--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_NAME=dbsys
+APP_NAME=
 APP_ENV=local
-APP_KEY=base64:OwEXO0t5ZNTTps4QtBJdzDCyUjSbXFzglb5Y1Qr+bKI=
+APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost:8989
 
@@ -8,12 +8,12 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=mysql
-DB_PORT=3306
-DB_DATABASE=dbprintwatch-dev
-DB_USERNAME=root
-DB_PASSWORD=root
+DB_CONNECTION=
+DB_HOST=
+DB_PORT=
+DB_DATABASE=
+DB_USERNAME=
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=redis
